--- a/.env.example
+++ b/.env.example
@@ -6,8 +6,8 @@ APP_URL=https://kejati-sumaterautara.kejaksaan.go.id
 APP_ORG="KEJATI SUMUT"
 APP_AUTHOR="Dev Tim"
 APP_DESC="Website Management System"
-RECAPTCHA_SITE_KEY=6Ldw_rIUAAAAAOHVZMrvP0aw2Ug17AQfxB5S7MSg
-RECAPTCHA_SECRET_KEY=6Ldw_rIUAAAAAP70_KjtNXwRl1TpDBXnaqT3ak04
+RECAPTCHA_SITE_KEY=
+RECAPTCHA_SECRET_KEY=
 GOOGLE_MAP="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3982.2001503753017!2d98.67420231523197!3d3.541241351603437!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x30313009f65f60a7%3A0xb145fef33a59795a!2sKejaksaan%20Tinggi%20Sumatera%20Utara!5e0!3m2!1sen!2sid!4v1651149486669!5m2!1sen!2sid"
 
 LOG_CHANNEL=stack
@@ -37,10 +37,10 @@ REDIS_PORT=6379
 MAIL_MAILER=smtp
 MAIL_HOST=smtp.gmail.com
 MAIL_PORT=465
-MAIL_USERNAME=kejatisumutweb@gmail.com
-MAIL_PASSWORD=kejatisumutwebJos
+MAIL_USERNAME=
+MAIL_PASSWORD=
 MAIL_ENCRYPTION=ssl
-MAIL_FROM_ADDRESS=kejatisumutweb@gmail.com
+MAIL_FROM_ADDRESS=
 MAIL_FROM_NAME="Website Kejati Sumut"
 
 AWS_ACCESS_KEY_ID=
