--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
-APP_NAME="Website Kejati Sumut"
+APP_NAME="Your Application Name"
 APP_ENV=local
 APP_KEY=base64:2/PRk5loC7GRkGseFDM2eig8zcZDLIy4L35f7A7cDGA=
 APP_DEBUG=true
-APP_URL=https://kejati-sumaterautara.kejaksaan.go.id
+APP_URL=http://localhost
 APP_ORG="KEJATI SUMUT"
 APP_AUTHOR="Dev Tim"
 APP_DESC="Website Management System"
@@ -41,7 +41,7 @@ MAIL_USERNAME=
 MAIL_PASSWORD=
 MAIL_ENCRYPTION=ssl
 MAIL_FROM_ADDRESS=
-MAIL_FROM_NAME="Website Kejati Sumut"
+MAIL_FROM_NAME="Your Application Name"
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
