--- a/.env.example
+++ b/.env.example
@@ -8,7 +8,7 @@ APP_AUTHOR="Dev Tim"
 APP_DESC="Website Management System"
 RECAPTCHA_SITE_KEY=
 RECAPTCHA_SECRET_KEY=
-GOOGLE_MAP="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3982.2001503753017!2d98.67420231523197!3d3.541241351603437!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x30313009f65f60a7%3A0xb145fef33a59795a!2sKejaksaan%20Tinggi%20Sumatera%20Utara!5e0!3m2!1sen!2sid!4v1651149486669!5m2!1sen!2sid"
+GOOGLE_MAP="Your Google Map"
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
