--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@ APP_ENV=local
 APP_KEY=base64:2/PRk5loC7GRkGseFDM2eig8zcZDLIy4L35f7A7cDGA=
 APP_DEBUG=true
 APP_URL=http://localhost
-APP_ORG="KEJATI SUMUT"
+APP_ORG="your org"
 APP_AUTHOR="Dev Tim"
 APP_DESC="Website Management System"
 RECAPTCHA_SITE_KEY=
@@ -17,9 +17,9 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=950
-DB_DATABASE=project_kejatisumut
-DB_USERNAME=root
-DB_PASSWORD=root
+DB_DATABASE=
+DB_USERNAME=
+DB_PASSWORD=roo
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
